# Certael

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Certael.slnx  Directory.Build.props  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  fuzz.yml  release.yml  scorecard.yml
backend/Certael.AnalyticsWorker/: AnalyticsConsumerService.cs  AnalyticsWorkerOptions.cs  Certael.AnalyticsWorker.csproj  ClickHouseEventProjection.cs  Dockerfile  EconomyAnalysisService.cs  Program.cs  RedisEconomyProjection.cs  RelationshipAnalysisService.cs
backend/Certael.Api/: CaseEndpoints.cs  Certael.Api.csproj  Dockerfile  EconomyEndpoints.cs  EvidenceEndpoints.cs  Program.cs  RelationshipEndpoints.cs  appsettings.json
backend/Certael.Console.Bff/: Certael.Console.Bff.csproj  Dockerfile  Program.cs  appsettings.json
backend/Certael.Coordinator/: Certael.Coordinator.csproj  CoordinatorStore.cs  Dockerfile  Program.cs
backend/Certael.EventWorker/: Certael.EventWorker.csproj  Dockerfile  EventDispatchService.cs  EventWorkerOptions.cs  EventWorkerTelemetry.cs  JetStreamOutboxPublisher.cs  Program.cs
backend/Certael.Persistence/: Certael.Persistence.csproj
benchmarks/: README.md  local-protocol-2026-07-13.json
cli/Certael.Cli/: Certael.Cli.csproj  Program.cs
compatibility/: core-agent-v1.json  support-policy.example.json
console/: AUDIT.md  DESIGN.md  PRODUCT.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
console/.impeccable/: design.json
console/qa/: fixture-server.mjs
console/src/: App.tsx  api.ts  main.tsx
deploy/compose/: docker-compose.release.yml  docker-compose.yml
docs/: README.md  acceptance-status.md  agent.md  authorization.md  compatibility.md  console-setup.md  economy-protection.md  engine-support.md  game-backend-integrations.md  getting-started.md  incident-response.md  installing-prebuilt.md  multi-region-continuity.md  native-api.md  operations.md  platform-proofs.md  post-1-platform.md  protections.md  releasing.md  rules.md  security-contract.md  security-model.md  standards-matrix.md  suite-installer.md  testing.md  troubleshooting.md  typescript-server-sdk.md  wasm-rules.md
docs/adr/: 0001-product-security-boundary.md  0002-canonical-protocol.md
engines/godot/: SConstruct
engines/unity/: package.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: action_envelope.rs
installer/: AUDIT.md  DESIGN.md  PRODUCT.md
installer/Certael.Installer/: ArtifactDownloader.cs  Certael.Installer.csproj  ConsoleBootstrap.cs  DeploymentBootstrap.cs  InstalledSuiteState.cs  InstallerEngine.cs  InstallerEvents.cs  ProjectConfiguration.cs  SignedSuiteManifest.cs  SuiteInstallation.cs  SuiteManifest.cs  SuiteManifestAssembly.cs
installer/Certael.Setup/: App.axaml  App.axaml.cs  Certael.Setup.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
installer/trust/: README.md  certael-release-keys.json
integrations/Certael.Integrations.Agones/: AgonesServerVerifier.cs  Certael.Integrations.Agones.csproj
integrations/Certael.Integrations.Eos/: Certael.Integrations.Eos.csproj  EosIdentityVerifier.cs
integrations/Certael.Integrations.PlayFab/: Certael.Integrations.PlayFab.csproj  PlayFabServerVerifier.cs
integrations/Certael.Integrations.Steam/: Certael.Integrations.Steam.csproj  SteamIdentityVerifier.cs  SteamWebApiClient.cs
rules/examples/: inventory.yaml
runtime/certael-c-api/: Cargo.toml
runtime/certael-core/: Cargo.toml
runtime/certael-core/examples/: interop_vector.rs
runtime/certael-core/src/: action.rs  error.rs  lib.rs  session.rs  verify.rs
runtime/certael-node/: Cargo.toml  build.rs
runtime/certael-node/src/: lib.rs
runtime/certael-wasm/: Cargo.toml
runtime/certael-wasm-guest/: Cargo.toml
runtime/certael-wasm/src/: lib.rs
samples/reference-game/: Certael.ReferenceGame.csproj  ReferenceGame.cs
scripts/: assemble-suite-managed.ps1  build.ps1  build.sh  new-suite-definition.ps1  package-cyclonedx-sbom.sh  smoke-node-addon.mjs  smoke-node-wasm.mjs  verify-local.sh
server-sdk/typescript/: README.md  package.json  (+3 more)
threat-models/: system.md
(+219 files in other folders)
