[workspace]
resolver = "2"
members = [
  "runtime/certael-core",
  "runtime/certael-c-api"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/certael/certael"

[workspace.dependencies]
base64ct = { version = "1.6", features = ["alloc"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "zeroize"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }
