[workspace]
resolver = "2"
members = [
  "runtime/certael-core",
  "runtime/certael-c-api",
  "runtime/certael-node",
  "runtime/certael-wasm",
  "tools/certael-load"
]

[workspace.package]
version = "0.4.0-alpha.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/violetweather/Certael"

[workspace.dependencies]
ed25519-dalek = { version = "3.0", features = ["rand_core", "zeroize"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.11"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }
