[package]
name = "certael-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
certael-core = { path = "../runtime/certael-core" }

[[bin]]
name = "action_envelope"
path = "fuzz_targets/action_envelope.rs"
test = false
doc = false
bench = false
