[package]
name = "certael-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64ct.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
zeroize.workspace = true
