[package]
name = "certael-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sha2.workspace = true
thiserror.workspace = true
wasmparser = "0.240"
wasmtime = { version = "36", default-features = false, features = ["cranelift", "runtime"] }

[dev-dependencies]
wat = "1"
